--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,22 +3,28 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2>Skills</h2>
+        <h2>Main Skills</h2>
         <hr class="star-light">
       </div>
     </div>
     <div class="row">
       <div class="col-lg-4 col-lg-offset-2">
-        <p>Java</p>
+        <p>JAVA</p>
       </div>
       <div class="col-lg-4">
-        <p>Javascript</p>
+        <p>HTML</p>
       </div>
       <div class="col-lg-4">
-        <p>React</p>
+        <p>CSS</p>
       </div>
       <div class="col-lg-4">
-        <p>MySql</p>
+        <p>JAVASCRIPT</p>
+      </div>
+      <div class="col-lg-4">
+        <p>JQUERY</p>
+      </div>
+      <div class="col-lg-4">
+        <p>MYSQL</p>
       </div>
     </div>
   </div>
