--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,9 +9,6 @@
     </div>
     <div class="row">
       <div class="col-lg-4 col-lg-offset-2">
-        <p>JAVA</p>
-      </div>
-      <div class="col-lg-4">
         <p>HTML</p>
       </div>
       <div class="col-lg-4">
@@ -21,9 +18,12 @@
         <p>JAVASCRIPT</p>
       </div>
       <div class="col-lg-4">
-        <p>JQUERY</p>
+        <p>JAVA</p>
       </div>
       <div class="col-lg-4">
+        <p>JQUERY</p>
+      </div>
+      <div class="col-lg-4 col-lg-offset-2">
         <p>MYSQL</p>
       </div>
     </div>
