--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,7 +8,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 col-lg-offset-2">
+      <div class="col-lg-4">
         <p>HTML</p>
       </div>
       <div class="col-lg-4">
@@ -23,7 +23,7 @@
       <div class="col-lg-4">
         <p>JQUERY</p>
       </div>
-      <div class="col-lg-4 col-lg-offset-2">
+      <div class="col-lg-4">
         <p>MYSQL</p>
       </div>
     </div>
