--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,7 @@
         <hr class="star-light">
       </div>
     </div>
-    <div class="row">
+    <div class="row" style="margin-left: 10rem;">
       <div class="col-lg-4">
         <p>HTML</p>
       </div>
