--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,7 @@
     </div>
     <div class="row" style="margin-left: 10rem;">
       <div class="col-lg-4">
-        <p>HTML</p>
+        <img src="img/icon/html.img">
       </div>
       <div class="col-lg-4">
         <p>CSS</p>
