--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,7 @@
     </div>
     <div class="row" style="margin-left: 10rem;">
       <div class="col-lg-4">
-        <img src="img/icon/html.png">
+        <img src="img/icon/html.png" style="width: 50px; height: 50px;">
       </div>
       <div class="col-lg-4">
         <p>CSS</p>
