--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,19 +12,19 @@
         <img src="img/icon/html.png" style="width: 75px; height: 75px;">
       </div>
       <div class="col-lg-4">
-        <p>CSS</p>
+        <img src="img/icon/css.png" style="width: 75px; height: 75px;">
       </div>
       <div class="col-lg-4">
-        <p>JAVASCRIPT</p>
+        <img src="img/icon/js.png" style="width: 75px; height: 75px;">
       </div>
       <div class="col-lg-4">
-        <p>JAVA</p>
+        <img src="img/icon/java.png" style="width: 75px; height: 75px;">
       </div>
       <div class="col-lg-4">
-        <p>JQUERY</p>
+        <img src="img/icon/jquery.png" style="width: 75px; height: 75px;">
       </div>
       <div class="col-lg-4">
-        <p>MYSQL</p>
+        <img src="img/icon/mysql.png" style="width: 75px; height: 75px;">
       </div>
     </div>
   </div>
