--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,7 +8,7 @@
       </div>
     </div>
     <div class="row" style="margin-left: 10rem;">
-      <div class="col-lg-4">
+      <div class="col-lg-4 col-lg-offset-2">
         <img src="img/icon/html.png" style="width: 75px; height: 75px;">
       </div>
       <div class="col-lg-4">
