--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,22 +8,22 @@
       </div>
     </div>
     <div class="row" style="margin-left: 10rem;">
-      <div class="col-lg-4">
+      <div>
         <img src="img/icon/html.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-4">
+      <div>
         <img src="img/icon/css.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-4">
+      <div>
         <img src="img/icon/js.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-12">
+      <div>
         <img src="img/icon/java.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-12">
+      <div>
         <img src="img/icon/jquery.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-12">
+      <div>
         <img src="img/icon/mysql.png" style="width: 75px; height: 75px;">
       </div>
     </div>
