--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,23 +7,23 @@
         <hr class="star-light">
       </div>
     </div>
-    <div class="row" style="margin-left: 10rem;">
-      <div>
+    <div class="row">
+      <div class="col-lg-2">
         <img src="img/icon/html.png" style="width: 75px; height: 75px;">
       </div>
-      <div>
+      <div class="col-lg-2">
         <img src="img/icon/css.png" style="width: 75px; height: 75px;">
       </div>
-      <div>
+      <div class="col-lg-2">
         <img src="img/icon/js.png" style="width: 75px; height: 75px;">
       </div>
-      <div>
+      <div class="col-lg-4">
         <img src="img/icon/java.png" style="width: 75px; height: 75px;">
       </div>
-      <div>
+      <div class="col-lg-4">
         <img src="img/icon/jquery.png" style="width: 75px; height: 75px;">
       </div>
-      <div>
+      <div class="col-lg-4">
         <img src="img/icon/mysql.png" style="width: 75px; height: 75px;">
       </div>
     </div>
