--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,15 +8,17 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-2">
+      <div class="col-lg-4">
         <img src="img/icon/html.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-2">
+      <div class="col-lg-4">
         <img src="img/icon/css.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-2">
+      <div class="col-lg-4">
         <img src="img/icon/js.png" style="width: 75px; height: 75px;">
       </div>
+    </div>
+    <div class="row" style="margin-left: 100px;">
       <div class="col-lg-4">
         <img src="img/icon/java.png" style="width: 75px; height: 75px;">
       </div>
