--- a/_includes/about.html
+++ b/_includes/about.html
@@ -18,7 +18,7 @@
         <img src="img/icon/js.png" style="width: 75px; height: 75px;">
       </div>
     </div>
-    <div class="row" style="margin-left: 15rem;">
+    <div class="row">
       <div class="col-lg-4">
         <img src="img/icon/java.png" style="width: 75px; height: 75px;">
       </div>
