--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,10 +17,10 @@
       <div class="col-lg-4">
         <img src="img/icon/js.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-6">
+      <div class="col-lg-4 col-lg-offset-2">
         <img src="img/icon/java.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-6">
+      <div class="col-lg-4">
         <img src="img/icon/jquery.png" style="width: 75px; height: 75px;">
       </div>
       <div class="col-lg-4">
