--- a/_includes/about.html
+++ b/_includes/about.html
@@ -29,7 +29,7 @@
       <div class="col-lg-4">
         <img src="img/icon/git.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-3">
+      <!-- <div class="col-lg-3">
         <img src="img/icon/spring.png" style="width: 75px; height: 75px;">
       </div>
       <div class="col-lg-3">
@@ -39,7 +39,7 @@
         <img src="img/icon/c.png" style="width: 75px; height: 75px;">
       </div>
       <div class="col-lg-3">
-        <img src="img/icon/python.png" style="width: 75px; height: 75px;">
+        <img src="img/icon/python.png" style="width: 75px; height: 75px;"> -->
       </div>
     </div>
   </div>
