--- a/_includes/about.html
+++ b/_includes/about.html
@@ -39,8 +39,8 @@
         <img src="img/icon/c.png" style="width: 75px; height: 75px;">
       </div>
       <div class="col-lg-3">
-        <img src="img/icon/python.png" style="width: 75px; height: 75px;"> -->
-      </div>
+        <img src="img/icon/python.png" style="width: 75px; height: 75px;">
+      </div> -->
     </div>
   </div>
 </section>
