--- a/_includes/about.html
+++ b/_includes/about.html
@@ -20,19 +20,21 @@
       <div class="col-lg-3">
         <img src="img/icon/java.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-4">
+    <div class="row" style="margin-left: 20rem;"> 
+      <div class="col-lg-3">
         <img src="img/icon/jquery.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-3">
         <img src="img/icon/mysql.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-3">
         <img src="img/icon/git.png" style="width: 75px; height: 75px;">
       </div>
-      <!-- <div class="col-lg-3">
+      <div class="col-lg-3">
         <img src="img/icon/spring.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-3">
+    </div>
+      <!-- <div class="col-lg-3">
         <img src="img/icon/react.png" style="width: 75px; height: 75px;">
       </div>
       <div class="col-lg-3">
