--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,16 +8,16 @@
       </div>
     </div>
     <div class="row" style="margin-left: 10rem;">
-      <div class="col-lg-4">
+      <div class="col-lg-3">
         <img src="img/icon/html.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-3">
         <img src="img/icon/css.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-3">
         <img src="img/icon/js.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-3">
         <img src="img/icon/java.png" style="width: 75px; height: 75px;">
       </div>
       <div class="col-lg-4">
@@ -29,10 +29,10 @@
       <div class="col-lg-4">
         <img src="img/icon/git.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-3">
         <img src="img/icon/spring.png" style="width: 75px; height: 75px;">
       </div>
-      <!-- <div class="col-lg-3">
+      <div class="col-lg-3">
         <img src="img/icon/react.png" style="width: 75px; height: 75px;">
       </div>
       <div class="col-lg-3">
@@ -40,7 +40,7 @@
       </div>
       <div class="col-lg-3">
         <img src="img/icon/python.png" style="width: 75px; height: 75px;">
-      </div> -->
+      </div>
     </div>
   </div>
 </section>
