--- a/_includes/about.html
+++ b/_includes/about.html
@@ -20,16 +20,16 @@
       <div class="col-lg-3">
         <img src="img/icon/java.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-3" style="margin-left: 20px;">
+      <div class="col-lg-3">
         <img src="img/icon/jquery.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-3" style="margin-left: 20px;">
+      <div class="col-lg-3">
         <img src="img/icon/mysql.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-3" style="margin-left: 20px;">
+      <div class="col-lg-3">
         <img src="img/icon/git.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-3" style="margin-left: 20px;">
+      <div class="col-lg-3">
         <img src="img/icon/spring.png" style="width: 75px; height: 75px;">
       </div>
       <div class="col-lg-3">
