--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,43 +8,43 @@
       </div>
     </div>
     <div class="row" style="margin-left: 10rem;">
-      <div class="col-lg-3">
+      <div style="margin-left: 10rem;">
         <img src="img/icon/html.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-3">
+      <div style="margin-left: 10rem;">
         <img src="img/icon/css.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-3">
+      <div" style="margin-left: 10rem;">
         <img src="img/icon/js.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-3">
+      <div style="margin-left: 10rem;">
         <img src="img/icon/java.png" style="width: 75px; height: 75px;">
       </div>
-    <div class="row" style="margin-left: 30rem;">
-      <div class="col-lg-3">
+    <div class="row" style="margin-left: 20rem;">
+      <div style="margin-left: 10rem;">
         <img src="img/icon/jquery.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-3">
+      <div style="margin-left: 10rem;">
         <img src="img/icon/mysql.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-3">
+      <div style="margin-left: 10rem;">
         <img src="img/icon/git.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-3">
+      <div style="margin-left: 10rem;">
         <img src="img/icon/spring.png" style="width: 75px; height: 75px;">
       </div>
     </div>
     <div class="row" style="margin-left: 10rem;">
-      <div class="col-lg-3">
+      <div style="margin-left: 10rem;">
         <img src="img/icon/react.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-3">
+      <div style="margin-left: 10rem;">
         <img src="img/icon/c.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-3">
+      <div style="margin-left: 10rem;">
         <img src="img/icon/python.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-3">
+      <div style="margin-left: 10rem;">
         <img src="img/icon/python.png" style="width: 75px; height: 75px;">
       </div>
     </div>
