--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,44 +7,44 @@
         <hr class="star-light">
       </div>
     </div>
-    <div class="flex ml-4">
-      <div>
+    <div class="row" style="margin-left: 10rem;">
+      <div style="margin-left: 10rem;">
         <img src="img/icon/html.png" style="width: 75px; height: 75px;">
       </div>
-      <div>
+      <div style="margin-left: 10rem;">
         <img src="img/icon/css.png" style="width: 75px; height: 75px;">
       </div>
-      <div>
+      <div" style="margin-left: 10rem;">
         <img src="img/icon/js.png" style="width: 75px; height: 75px;">
       </div>
-      <div>
+      <div style="margin-left: 10rem;">
         <img src="img/icon/java.png" style="width: 75px; height: 75px;">
       </div>
-    <div class="flex ml-4">
-      <div>
+    <div class="row" style="margin-left: 20rem;">
+      <div style="margin-left: 10rem;">
         <img src="img/icon/jquery.png" style="width: 75px; height: 75px;">
       </div>
-      <div>
+      <div style="margin-left: 10rem;">
         <img src="img/icon/mysql.png" style="width: 75px; height: 75px;">
       </div>
-      <div>
+      <div style="margin-left: 10rem;">
         <img src="img/icon/git.png" style="width: 75px; height: 75px;">
       </div>
-      <div>
+      <div style="margin-left: 10rem;">
         <img src="img/icon/spring.png" style="width: 75px; height: 75px;">
       </div>
     </div>
-    <div class="flex ml-4">
-      <div>
+    <div class="row" style="margin-left: 10rem;">
+      <div style="margin-left: 10rem;">
         <img src="img/icon/react.png" style="width: 75px; height: 75px;">
       </div>
-      <div>
+      <div style="margin-left: 10rem;">
         <img src="img/icon/c.png" style="width: 75px; height: 75px;">
       </div>
-      <div>
+      <div style="margin-left: 10rem;">
         <img src="img/icon/python.png" style="width: 75px; height: 75px;">
       </div>
-      <div>
+      <div style="margin-left: 10rem;">
         <img src="img/icon/python.png" style="width: 75px; height: 75px;">
       </div>
     </div>
