--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,7 @@
         <hr class="star-light">
       </div>
     </div>
-    <div class="row" style="margin-left: 10rem;">
+    <div class="flex">
       <div style="margin-left: 10rem;">
         <img src="img/icon/html.png" style="width: 75px; height: 75px;">
       </div>
@@ -20,7 +20,7 @@
       <div style="margin-left: 10rem;">
         <img src="img/icon/java.png" style="width: 75px; height: 75px;">
       </div>
-    <div class="row" style="margin-left: 20rem;">
+    <div class="flex">
       <div style="margin-left: 10rem;">
         <img src="img/icon/jquery.png" style="width: 75px; height: 75px;">
       </div>
@@ -34,7 +34,7 @@
         <img src="img/icon/spring.png" style="width: 75px; height: 75px;">
       </div>
     </div>
-    <div class="row" style="margin-left: 10rem;">
+    <div class="flex">
       <div style="margin-left: 10rem;">
         <img src="img/icon/react.png" style="width: 75px; height: 75px;">
       </div>
