--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,44 +7,41 @@
         <hr class="star-light">
       </div>
     </div>
-    <div class="flex">
-      <div style="margin-left: 10rem;">
+    <div class="row">
+      <div class="col-lg-3">
         <img src="img/icon/html.png" style="width: 75px; height: 75px;">
       </div>
-      <div style="margin-left: 10rem;">
+      <div class="col-lg-3">
         <img src="img/icon/css.png" style="width: 75px; height: 75px;">
       </div>
-      <div" style="margin-left: 10rem;">
+      <div class="col-lg-3">
         <img src="img/icon/js.png" style="width: 75px; height: 75px;">
       </div>
-      <div style="margin-left: 10rem;">
+      <div class="col-lg-3">
         <img src="img/icon/java.png" style="width: 75px; height: 75px;">
       </div>
-    <div class="flex">
-      <div style="margin-left: 10rem;">
+      <div class="col-lg-3">
         <img src="img/icon/jquery.png" style="width: 75px; height: 75px;">
       </div>
-      <div style="margin-left: 10rem;">
+      <div class="col-lg-3">
         <img src="img/icon/mysql.png" style="width: 75px; height: 75px;">
       </div>
-      <div style="margin-left: 10rem;">
+      <div class="col-lg-3">
         <img src="img/icon/git.png" style="width: 75px; height: 75px;">
       </div>
-      <div style="margin-left: 10rem;">
+      <div class="col-lg-3">
         <img src="img/icon/spring.png" style="width: 75px; height: 75px;">
       </div>
-    </div>
-    <div class="flex">
-      <div style="margin-left: 10rem;">
+      <div class="col-lg-3">
         <img src="img/icon/react.png" style="width: 75px; height: 75px;">
       </div>
-      <div style="margin-left: 10rem;">
+      <div class="col-lg-3">
         <img src="img/icon/c.png" style="width: 75px; height: 75px;">
       </div>
-      <div style="margin-left: 10rem;">
+      <div class="col-lg-3">
         <img src="img/icon/python.png" style="width: 75px; height: 75px;">
       </div>
-      <div style="margin-left: 10rem;">
+      <div class="col-lg-3">
         <img src="img/icon/python.png" style="width: 75px; height: 75px;">
       </div>
     </div>
