--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,40 +8,37 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-3">
+      <div>
         <img src="img/icon/html.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-3">
+      <div>
         <img src="img/icon/css.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-3">
+      <div>
         <img src="img/icon/js.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-3">
+      <div>
         <img src="img/icon/java.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-rg-3">
+      <div>
         <img src="img/icon/jquery.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-rg-3">
+      <div>
         <img src="img/icon/mysql.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-rg-3">
+      <div>
         <img src="img/icon/git.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-rg-3">
+      <div>
         <img src="img/icon/spring.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-3">
+      <div>
         <img src="img/icon/react.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-3">
+      <div>
         <img src="img/icon/c.png" style="width: 75px; height: 75px;">
       </div>
-      <div class="col-lg-3">
-        <img src="img/icon/python.png" style="width: 75px; height: 75px;">
-      </div>
-      <div class="col-lg-3">
+      <div>
         <img src="img/icon/python.png" style="width: 75px; height: 75px;">
       </div>
     </div>
