--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,38 +8,38 @@
       </div>
     </div>
     <div style="display: flex; margin-left: 100px;">
-      <div>
-        <img src="img/icon/html.png" style="width: 75px; height: 75px;">
+      <div style="width: 75px; height: 75px; margin: 50px;">
+        <img src="img/icon/html.png">
       </div>
-      <div>
-        <img src="img/icon/css.png" style="width: 75px; height: 75px;">
+      <div style="width: 75px; height: 75px; margin: 50px;">
+        <img src="img/icon/css.png">
       </div>
-      <div>
-        <img src="img/icon/js.png" style="width: 75px; height: 75px;">
+      <div style="width: 75px; height: 75px; margin: 50px;">
+        <img src="img/icon/js.png">
       </div>
-      <div>
-        <img src="img/icon/java.png" style="width: 75px; height: 75px;">
+      <div style="width: 75px; height: 75px; margin: 50px;">
+        <img src="img/icon/java.png">
       </div>
-      <div>
-        <img src="img/icon/jquery.png" style="width: 75px; height: 75px;">
+      <div style="width: 75px; height: 75px; margin: 50px;">
+        <img src="img/icon/jquery.png">
       </div>
-      <div>
-        <img src="img/icon/mysql.png" style="width: 75px; height: 75px;">
+      <div style="width: 75px; height: 75px; margin: 50px;">
+        <img src="img/icon/mysql.png">
       </div>
-      <div>
-        <img src="img/icon/git.png" style="width: 75px; height: 75px;">
+      <div style="width: 75px; height: 75px; margin: 50px;">
+        <img src="img/icon/git.png">
       </div>
-      <div>
-        <img src="img/icon/spring.png" style="width: 75px; height: 75px;">
+      <div style="width: 75px; height: 75px; margin: 50px;">
+        <img src="img/icon/spring.png">
       </div>
-      <div>
-        <img src="img/icon/react.png" style="width: 75px; height: 75px;">
+      <div style="width: 75px; height: 75px; margin: 50px;">
+        <img src="img/icon/react.png">
       </div>
-      <div>
-        <img src="img/icon/c.png" style="width: 75px; height: 75px;">
+      <div style="width: 75px; height: 75px; margin: 50px;">
+        <img src="img/icon/c.png">
       </div>
-      <div>
-        <img src="img/icon/python.png" style="width: 75px; height: 75px;">
+      <div style="width: 75px; height: 75px; margin: 50px;">
+        <img src="img/icon/python.png">
       </div>
     </div>
   </div>
