--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,7 @@
         <hr class="star-light">
       </div>
     </div>
-    <div style="display: flex; margin-left: 100px;">
+    <div style="display: flex;">
       <div style="width: 75px; height: 75px; margin: 50px;">
         <img src="img/icon/html.png">
       </div>
