--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,7 @@
         <hr class="star-light">
       </div>
     </div>
-    <div style="display: flex;">
+    <div style="display: flex; position: relative;">
       <div style="margin-right: 50px;">
         <img src="img/icon/html.png" style="width: 75px; height: 75px;">
       </div>
@@ -34,12 +34,6 @@
       </div>
       <div style="margin-right: 50px;">
         <img src="img/icon/react.png" style="width: 75px; height: 75px;">
-      </div>
-      <div style="margin-right: 50px;">
-        <img src="img/icon/c.png" style="width: 75px; height: 75px;">
-      </div>
-      <div style="margin-right: 50px;">
-        <img src="img/icon/python.png" style="width: 75px; height: 75px;">
       </div>
     </div>
   </div>
