--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,7 @@
         <hr class="star-light">
       </div>
     </div>
-    <div style="display: flex; position: relative;">
+    <div style="display: flex; position: center;">
       <div style="margin-right: 50px;">
         <img src="img/icon/html.png" style="width: 75px; height: 75px;">
       </div>
