--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,32 +7,32 @@
         <hr class="star-light">
       </div>
     </div>
-    <div style="display: flex; position: center;">
-      <div style="margin-right: 50px;">
+    <div style="display: flex;">
+      <div style="margin-left: 50px;">
         <img src="img/icon/html.png" style="width: 75px; height: 75px;">
       </div>
-      <div style="margin-right: 50px;">
+      <div style="margin-left: 50px;">
         <img src="img/icon/css.png" style="width: 75px; height: 75px;">
       </div>
-      <div style="margin-right: 50px;">
+      <div style="margin-left: 50px;">
         <img src="img/icon/js.png" style="width: 75px; height: 75px;">
       </div>
-      <div style="margin-right: 50px;">
+      <div style="margin-left: 50px;">
         <img src="img/icon/java.png" style="width: 75px; height: 75px;">
       </div>
-      <div style="margin-right: 50px;">
+      <div style="margin-left: 50px;">
         <img src="img/icon/jquery.png" style="width: 75px; height: 75px;">
       </div>
-      <div style="margin-right: 50px;">
+      <div style="margin-left: 50px;">
         <img src="img/icon/mysql.png" style="width: 75px; height: 75px;">
       </div>
-      <div style="margin-right: 50px;">
+      <div style="margin-left: 50px;">
         <img src="img/icon/git.png" style="width: 75px; height: 75px;">
       </div>
-      <div style="margin-right: 50px;">
+      <div style="margin-left: 50px;">
         <img src="img/icon/spring.png" style="width: 75px; height: 75px;">
       </div>
-      <div style="margin-right: 50px;">
+      <div style="margin-left: 50px;">
         <img src="img/icon/react.png" style="width: 75px; height: 75px;">
       </div>
     </div>
