--- a/_includes/about.html
+++ b/_includes/about.html
@@ -18,7 +18,7 @@
         <img src="img/icon/js.png" style="width: 75px; height: 75px;">
       </div>
       <div style="margin-left: 50px; background-color: white; border: 1px solid; border-radius: 100%;">
-        <img src="img/icon/java.png" style="width: 75px; height: 75px;">
+        <img src="img/icon/java.png" style="padding: auto;">
       </div>
       <div style="margin-left: 50px; background-color: white; border: 1px solid; border-radius: 100%;">
         <img src="img/icon/jquery.png" style="width: 75px; height: 75px;">
