--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,23 +17,23 @@
       <div style="margin-left: 50px;">
         <img src="img/icon/js.png" style="width: 75px; height: 75px;">
       </div>
-      <div style="margin-left: 50px; background-color: white; border: 1px solid; border-radius: 100%;">
+      <div style="margin-left: 50px; background-color: white; border: 1px solid; border-radius: 50%;">
         <img src="img/icon/java.png" style="padding: auto;">
       </div>
-      <div style="margin-left: 50px; background-color: white; border: 1px solid; border-radius: 100%;">
-        <img src="img/icon/jquery.png" style="width: 75px; height: 75px;">
+      <div style="margin-left: 50px; background-color: white; border: 1px solid; border-radius: 50%;">
+        <img src="img/icon/jquery.png" style="padding: auto;">
       </div>
-      <div style="margin-left: 50px; background-color: white; border: 1px solid; border-radius: 100%;">
-        <img src="img/icon/mysql.png" style="width: 75px; height: 75px;">
+      <div style="margin-left: 50px; background-color: white; border: 1px solid; border-radius: 50%;">
+        <img src="img/icon/mysql.png" style="padding: auto;">
       </div>
-      <div style="margin-left: 50px; background-color: white; border: 1px solid; border-radius: 100%;">
-        <img src="img/icon/git.png" style="width: 75px; height: 50px;">
+      <div style="margin-left: 50px; background-color: white; border: 1px solid; border-radius: 50%;">
+        <img src="img/icon/git.png" style="padding: auto;">
       </div>
-      <div style="margin-left: 50px; background-color: white; border: 1px solid; border-radius: 100%;">
-        <img src="img/icon/spring.png" style="width: 75px; height: 75px;">
+      <div style="margin-left: 50px; background-color: white; border: 1px solid; border-radius: 50%;">
+        <img src="img/icon/spring.png" style="padding: auto;">
       </div>
-      <div style="margin-left: 50px; background-color: white; border: 1px solid; border-radius: 100%;">
-        <img src="img/icon/react.png" style="width: 75px; height: 75px;">
+      <div style="margin-left: 50px; background-color: white; border: 1px solid; border-radius: 50%;">
+        <img src="img/icon/react.png" style="padding: auto;">
       </div>
     </div>
   </div>
