--- a/_includes/about.html
+++ b/_includes/about.html
@@ -27,7 +27,7 @@
         <img src="img/icon/mysql.png" style="width: 75px; height: 75px;">
       </div>
       <div style="margin-left: 50px; background-color: white; border: 1px solid; border-radius: 10%;">
-        <img src="img/icon/git.png" style="width: 75px; height: 30px;">
+        <img src="img/icon/git.png" style="width: 75px; height: 30px; margin-top: 20px;">
       </div>
       <div style="margin-left: 50px; background-color: white; border: 1px solid; border-radius: 10%;">
         <img src="img/icon/spring.png" style="width: 75px; height: 75px;">
