--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,55 +3,19 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2>Contact Me</h2>
+        <h2>About Me</h2>
         <hr class="star-primary">
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-8 col-lg-offset-2">
-        <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-        <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-        <form name="sentMessage" id="contactForm" novalidate>
-          <div class="row control-group">
-            <div class="form-group col-xs-12 floating-label-form-group controls">
-              <label for="name">Name</label>
-              <input type="text" class="form-control" placeholder="Name" id="name" required
-                data-validation-required-message="Please enter your name.">
-              <p class="help-block text-danger"></p>
-            </div>
-          </div>
-          <div class="row control-group">
-            <div class="form-group col-xs-12 floating-label-form-group controls">
-              <label for="email">Email Address</label>
-              <input type="email" class="form-control" placeholder="Email Address" id="email" required
-                data-validation-required-message="Please enter your email address.">
-              <p class="help-block text-danger"></p>
-            </div>
-          </div>
-          <div class="row control-group">
-            <div class="form-group col-xs-12 floating-label-form-group controls">
-              <label for="phone">Phone Number</label>
-              <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required
-                data-validation-required-message="Please enter your phone number.">
-              <p class="help-block text-danger"></p>
-            </div>
-          </div>
-          <div class="row control-group">
-            <div class="form-group col-xs-12 floating-label-form-group controls">
-              <label for="message">Message</label>
-              <textarea rows="5" class="form-control" placeholder="Message" id="message" required
-                data-validation-required-message="Please enter a message."></textarea>
-              <p class="help-block text-danger"></p>
-            </div>
-          </div>
-          <br>
-          <div id="success"></div>
-          <div class="row">
-            <div class="form-group col-xs-12">
-              <button type="submit" class="btn btn-success btn-lg">Send</button>
-            </div>
-          </div>
-        </form>
+      <div class="col-lg-4 col-lg-offset-2">
+        <div>이름 : 송현석</div>
+        <div>생년월일 : 1992.03.30</div>
+        <div>연락처 : 010-2837-0309</div>
+        <div>이메일 : sheuerit@gamil.com</div>
+      </div>
+      <div class="col-lg-4 col-lg-offset-2">
+        <div></div>
       </div>
     </div>
   </div>
