--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,14 +8,21 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 col-lg-offset-2">
-        <div>이름 : 송현석</div>
-        <div>생년월일 : 1992.03.30</div>
-        <div>연락처 : 010-2837-0309</div>
-        <div>이메일 : sheuerit@gamil.com</div>
+      <div class="col-lg-4">
+        <div class="fa-solid">이름 : 송현석</div>
+        <div class="fa-solid">생년월일 : 1992.03.30</div>
+        <div class="fa-solid">연락처 : 010-2837-0309</div>
+        <div class="fa-solid">이메일 : sheuerit@gamil.com</div>
       </div>
-      <div class="col-lg-4 col-lg-offset-2">
-        <div></div>
+      <div class="col-lg-4">
+        <div>[학력]</div>
+        <div>유성고등학교</div>
+        <div>한남대학교 교육학과</div>
+      </div>
+      <div class="col-lg-4">
+        <div>[교육과정]</div>
+        <div>코리아IT아카데미 웹개발 수료</div>
+        <div>코리아IT아카데미 Javascript 풀스택개발 수강중</div>
       </div>
     </div>
   </div>
