--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -9,10 +9,10 @@
     </div>
     <div class="row">
       <div class="col-lg-4">
-        <div class="fa-solid">이름 : 송현석</div>
-        <div class="fa-solid">생년월일 : 1992.03.30</div>
-        <div class="fa-solid">연락처 : 010-2837-0309</div>
-        <div class="fa-solid">이메일 : sheuerit@gamil.com</div>
+        <div class="fa-regular">이름 : 송현석</div>
+        <div class="fa-regular">생년월일 : 1992.03.30</div>
+        <div class="fa-regular">연락처 : 010-2837-0309</div>
+        <div class="fa-regular">이메일 : sheuerit@gamil.com</div>
       </div>
       <div class="col-lg-4">
         <div>[학력]</div>
