--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,7 +8,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4">
+      <div class="col-lg-4 col-lg-offset-3">
         <div class="fa-regular">이름 : 송현석</div>
         <div class="fa-regular">생년월일 : 1992.03.30</div>
         <div class="fa-regular">연락처 : 010-2837-0309</div>
