--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -12,7 +12,7 @@
         <div class="fa-2x">이름 : 송현석</div>
         <div class="fa-2x">생년월일 : 1992.03.30</div>
         <div class="fa-2x">연락처 : 010-2837-0309</div>
-        <div class="fa-2x">이메일 : sheuerit@gamil.com</div>
+        <div class="fa-2x">이메일 : sheuerit@gmail.com</div>
       </div>
       <div class="col-lg-4">
         <div>[학력]</div>
