--- a/css/font-awesome/css/all.css
+++ b/css/font-awesome/css/all.css
@@ -80,8 +80,7 @@
 
 .fa-xl {
   font-size: 1.5em;
-  line-height: 2em;
-  vertical-align: -0.125em; }
+  line-height: 2em; }
 
 .fa-2xl {
   font-size: 2em;
