--- a/css/font-awesome/css/all.css
+++ b/css/font-awesome/css/all.css
@@ -80,7 +80,8 @@
 
 .fa-xl {
   font-size: 1.5em;
-  line-height: 2em; }
+  line-height: 0.04167em;
+  vertical-align: -0.125em; }
 
 .fa-2xl {
   font-size: 2em;
