--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -9,10 +9,10 @@
     </div>
     <div class="row">
       <div class="col-lg-4">
-        <div class="text-2xl">이름 : 송현석</div>
-        <div class="text-2xl">생년월일 : 1992.03.30</div>
-        <div class="text-2xl">연락처 : 010-2837-0309</div>
-        <div class="text-2xl">이메일 : sheuerit@gmail.com</div>
+        <div class="fa-brands">이름 : 송현석</div>
+        <div class="fa-brands">생년월일 : 1992.03.30</div>
+        <div class="fa-brands">연락처 : 010-2837-0309</div>
+        <div class="fa-brands">이메일 : sheuerit@gmail.com</div>
       </div>
       <div class="col-lg-4">
         <div>[학력]</div>
