--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -9,10 +9,10 @@
     </div>
     <div class="row">
       <div class="col-lg-4">
-        <div style="font-size: 1.5rem;">이름 : 송현석</div>
-        <div style="font-size: 1.5rem;">생년월일 : 1992.03.30</div>
-        <div style="font-size: 1.5rem;">연락처 : 010-2837-0309</div>
-        <div style="font-size: 1.5rem;">이메일 : sheuerit@gmail.com</div>
+        <div style="font-size: 1.5em;">이름 : 송현석</div>
+        <div style="font-size: 1.5em;">생년월일 : 1992.03.30</div>
+        <div style="font-size: 1.5em;">연락처 : 010-2837-0309</div>
+        <div style="font-size: 1.5em;">이메일 : sheuerit@gmail.com</div>
       </div>
       <div class="col-lg-4">
         <div>[학력]</div>
