--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -15,14 +15,14 @@
         <div style="font-size: 1.5em;">이메일 : sheuerit@gmail.com</div>
       </div>
       <div class="col-lg-4">
-        <div>[학력]</div>
-        <div>유성고등학교</div>
-        <div>한남대학교 교육학과</div>
+        <div class="fa-solid" style="font-size: 1.5em;">[학력]</div>
+        <div style="font-size: 1.5em;">유성고등학교</div>
+        <div style="font-size: 1.5em;">한남대학교 교육학과</div>
       </div>
       <div class="col-lg-4">
-        <div>[교육과정]</div>
-        <div>코리아IT아카데미 웹개발 수료</div>
-        <div>코리아IT아카데미 Javascript 풀스택개발 수강중</div>
+        <div class="fa-solid" style="font-size: 1.5em;">[교육과정]</div>
+        <div style="font-size: 1.5em;">코리아IT아카데미 웹개발 수료</div>
+        <div style="font-size: 1.5em;">코리아IT아카데미 Javascript 풀스택개발 수강중</div>
       </div>
     </div>
   </div>
