--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -9,19 +9,21 @@
     </div>
     <div class="row">
       <div class="col-lg-4">
-        <div class="fa-solid" style="font-size: 1.5em;">[소개]</div>
-        <div style="font-size: 1.5em; font-family: Franklin Gothic Medium;">이름 : 송현석</div>
-        <div style="font-size: 1.5em; font-family: Franklin Gothic Medium;">생년월일 : 1992.03.30</div>
-        <div style="font-size: 1.5em; font-family: Franklin Gothic Medium;">연락처 : 010-2837-0309</div>
-        <div style="font-size: 1.5em; font-family: Franklin Gothic Medium;">이메일 : sheuerit@gmail.com</div>
+        <div class="fa-solid" style="font-size: 1.5em; margin-bottom: 10px;">[소개]</div>
+        <ul>
+          <li style="font-size: 1.5em;">이름 : 송현석</li>
+          <li style="font-size: 1.5em;">생년월일 : 1992.03.30</li>
+          <li style="font-size: 1.5em;">연락처 : 010-2837-0309</li>
+          <li style="font-size: 1.5em;">이메일 : sheuerit@gmail.com</li>
+        </ul>
       </div>
       <div class="col-lg-4">
-        <div class="fa-solid" style="font-size: 1.5em;">[학력]</div>
+        <div class="fa-solid" style="font-size: 1.5em; margin-bottom: 10px;">[학력]</div>
         <div style="font-size: 1.5em;">유성고등학교</div>
         <div style="font-size: 1.5em;">한남대학교 교육학과</div>
       </div>
       <div class="col-lg-4">
-        <div class="fa-solid" style="font-size: 1.5em;">[코리아IT아카데미 교육과정]</div>
+        <div class="fa-solid" style="font-size: 1.5em; margin-bottom: 10px;">[코리아IT아카데미 교육과정]</div>
         <div style="font-size: 1.5em;">웹개발 수료</div>
         <div style="font-size: 1.5em;">Javascript 풀스택개발 수강중</div>
       </div>
