--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -9,7 +9,7 @@
     </div>
     <div class="row">
       <div class="col-lg-4" style="border: 5px; border-radius: 25%;">
-        <div class="fa-solid" style="font-size: 1.5em; margin-bottom: 10px; text-align: center;">[소개]</div>
+        <div class="fa-solid text-center" style="font-size: 1.5em; margin-bottom: 10px;">[소개]</div>
         <ul>
           <li style="font-size: 1.5em;">이름 : 송현석</li>
           <li style="font-size: 1.5em;">생년월일 : 1992.03.30</li>
