--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,9 +8,9 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4" style="border: 5px; border-radius: 25%;">
-        <div class="fa-solid fa-fw" style="font-size: 1.5em; margin-bottom: 10px;">[소개]</div>
+      <div class="col-lg-4">
         <ul>
+          <li style="list-style: none; text-align: center; font-size: 1.5em; font-weight: bold;">[소개]</li>
           <li style="font-size: 1.5em;">이름 : 송현석</li>
           <li style="font-size: 1.5em;">생년월일 : 1992.03.30</li>
           <li style="font-size: 1.5em;">연락처 : 010-2837-0309</li>
