--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -9,7 +9,7 @@
     </div>
     <div class="row">
       <div class="col-lg-4">
-        <ul style="background-color: darkslategrey; border-radius: 25%;">
+        <ul style="border: 5px; border-color: #2c3e50; border-radius: 10%;">
           <li style="list-style: none; text-align: center; font-size: 1.5em; font-weight: bold;">소개</li>
           <li style="font-size: 1.5em;">이름 : 송현석</li>
           <li style="font-size: 1.5em;">생년월일 : 1992.03.30</li>
