--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,22 +17,22 @@
       <div style="margin-left: 50px;">
         <img src="img/icon/js.png" style="width: 75px; height: 75px;">
       </div>
-      <div style="margin-left: 50px; background-color: white; border: 1px solid; border-radius: 10%;">
+      <div style="margin-left: 50px; background-color: white; border: 1px solid #2c3e50; border-radius: 10%;">
         <img src="img/icon/java.png" style="width: 75px; height: 75px;">
       </div>
-      <div style="margin-left: 50px; background-color: white; border: 1px solid; border-radius: 10%;">
+      <div style="margin-left: 50px; background-color: white; border: 1px solid #2c3e50; border-radius: 10%;">
         <img src="img/icon/jquery.png" style="width: 75px; height: 75px;">
       </div>
-      <div style="margin-left: 50px; background-color: white; border: 1px solid; border-radius: 10%;">
+      <div style="margin-left: 50px; background-color: white; border: 1px solid #2c3e50; border-radius: 10%;">
         <img src="img/icon/mysql.png" style="width: 75px; height: 75px;">
       </div>
-      <div style="margin-left: 50px; background-color: white; border: 1px solid; border-radius: 10%;">
+      <div style="margin-left: 50px; background-color: white; border: 1px solid #2c3e50; border-radius: 10%;">
         <img src="img/icon/git.png" style="width: 75px; height: 30px; margin-top: 20px;">
       </div>
-      <div style="margin-left: 50px; background-color: white; border: 1px solid; border-radius: 10%;">
+      <div style="margin-left: 50px; background-color: white; border: 1px solid #2c3e50; border-radius: 10%;">
         <img src="img/icon/spring.png" style="width: 75px; height: 75px;">
       </div>
-      <div style="margin-left: 50px; background-color: white; border: 1px solid; border-radius: 10%;">
+      <div style="margin-left: 50px; background-color: white; border: 1px solid #2c3e50; border-radius: 10%;">
         <img src="img/icon/react.png" style="width: 75px; height: 75px;">
       </div>
     </div>
