--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -9,8 +9,8 @@
     </div>
     <div class="row">
       <div class="col-lg-4">
-        <ul style="border: 1px solid #2c3e50; border-radius: 10%;">
-          <li style="list-style: none; text-align: center; font-size: 1.5em; font-weight: bold;">소개</li>
+        <div style="text-align: center; font-size: 1.5em; font-weight: bold;">소개</div>
+        <ul style="border: 5px solid #2c3e50; border-radius: 10px;">
           <li style="font-size: 1.5em;">이름 : 송현석</li>
           <li style="font-size: 1.5em;">생년월일 : 1992.03.30</li>
           <li style="font-size: 1.5em;">연락처 : 010-2837-0309</li>
