--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -18,14 +18,18 @@
         </ul>
       </div>
       <div class="col-lg-4">
-        <div class="fa-solid" style="font-size: 1.5em; margin-bottom: 10px;">[학력]</div>
-        <div style="font-size: 1.5em;">유성고등학교</div>
-        <div style="font-size: 1.5em;">한남대학교 교육학과</div>
+        <div style="text-align: center; font-size: 1.5em; font-weight: bold;">학력</div>
+        <ul style="border: 5px solid #2c3e50; border-radius: 10px;">
+          <li style="font-size: 1.5em;">유성고등학교</li>
+          <li style="font-size: 1.5em;">한남대학교 교육학과</li>
+        </ul>
       </div>
       <div class="col-lg-4">
-        <div class="fa-solid" style="font-size: 1.5em; margin-bottom: 10px;">[코리아IT아카데미 교육과정]</div>
-        <div style="font-size: 1.5em;">웹개발 수료</div>
-        <div style="font-size: 1.5em;">Javascript 풀스택개발 수강중</div>
+        <div style="text-align: center; font-size: 1.5em; font-weight: bold;">코리아IT아카데미 교육과정</div>
+        <ul style="border: 5px solid #2c3e50; border-radius: 10px;">
+          <li style="font-size: 1.5em;">웹개발 수료</li>
+          <li style="font-size: 1.5em;">Javascript 풀스택개발 수강중</li>
+        </ul>
       </div>
     </div>
   </div>
