--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,7 +25,7 @@
           <a href="#about">Main Skills</a>
         </li>
         <li class="page-scroll">
-          <a href="#contact">Contact</a>
+          <a href="#contact">About Me</a>
         </li>
       </ul>
     </div>
