--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -29,10 +29,10 @@
       <div class="col-lg-4">
         <div style="text-align: center; font-size: 1.5em; font-weight: bold;">코리아IT아카데미 교육과정</div>
         <ul style="border: 5px solid #2c3e50; border-radius: 10px;">
-          <li style="list-style: none;"></li>
+          <li style="list-style: none;"><span></span></li>
           <li style="font-size: 1.5em;">웹개발 수료</li>
           <li style="font-size: 1.5em;">Javascript 풀스택개발 수강중</li>
-          <li style="list-style: none;"></li>
+          <li style="list-style: none;"><span></span></li>
         </ul>
       </div>
     </div>
