--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -9,7 +9,7 @@
     </div>
     <div class="row">
       <div class="col-lg-4">
-        <div style="text-align: center; font-size: 1.5em; font-weight: bold;">소개</div>
+        <div style="text-align: center; font-weight: bold; color: white; background-color: #2c3e50; border-radius: 10px;">소개</div>
         <ul style="border: 5px solid #2c3e50; border-radius: 10px;">
           <li style="font-size: 1.5em;">이름 : 송현석</li>
           <li style="font-size: 1.5em;">생년월일 : 1992.03.30</li>
@@ -18,21 +18,17 @@
         </ul>
       </div>
       <div class="col-lg-4">
-        <div style="text-align: center; font-size: 1.5em; font-weight: bold;">학력</div>
+        <div style="text-align: center; font-weight: bold; color: white; background-color: #2c3e50; border-radius: 10px;">학력</div>
         <ul style="border: 5px solid #2c3e50; border-radius: 10px;">
-          <li style="list-style: none;"></li>
           <li style="font-size: 1.5em;">유성고등학교</li>
           <li style="font-size: 1.5em;">한남대학교 교육학과</li>
-          <li style="list-style: none;"></li>
         </ul>
       </div>
       <div class="col-lg-4">
-        <div style="text-align: center; font-size: 1.5em; font-weight: bold;">코리아IT아카데미 교육과정</div>
+        <div style="text-align: center; font-weight: bold; color: white; background-color: #2c3e50; border-radius: 10px;">코리아IT아카데미 교육과정</div>
         <ul style="border: 5px solid #2c3e50; border-radius: 10px;">
-          <li style="list-style: none;"><span></span></li>
           <li style="font-size: 1.5em;">웹개발 수료</li>
           <li style="font-size: 1.5em;">Javascript 풀스택개발 수강중</li>
-          <li style="list-style: none;"><span></span></li>
         </ul>
       </div>
     </div>
