--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -9,26 +9,26 @@
     </div>
     <div class="row">
       <div class="col-lg-4">
-        <div style="text-align: center; font-weight: bold; color: white; background-color: #2c3e50; border-radius: 10px;">소개</div>
-        <ul style="border: 5px solid #2c3e50; border-radius: 10px;">
-          <li style="font-size: 1.5em;">이름 : 송현석</li>
-          <li style="font-size: 1.5em;">생년월일 : 1992.03.30</li>
-          <li style="font-size: 1.5em;">연락처 : 010-2837-0309</li>
-          <li style="font-size: 1.5em;">이메일 : sheuerit@gmail.com</li>
+        <div style="text-align: center; font-weight: bold;">소개</div>
+        <ul style="background-color: #2c3e50; border-radius: 10px;">
+          <li style="font-size: 1.5em; color: white;">이름 : 송현석</li>
+          <li style="font-size: 1.5em; color: white;">생년월일 : 1992.03.30</li>
+          <li style="font-size: 1.5em; color: white;">연락처 : 010-2837-0309</li>
+          <li style="font-size: 1.5em; color: white;">이메일 : sheuerit@gmail.com</li>
         </ul>
       </div>
       <div class="col-lg-4">
-        <div style="text-align: center; font-weight: bold; color: white; background-color: #2c3e50; border-radius: 10px;">학력</div>
-        <ul style="border: 5px solid #2c3e50; border-radius: 10px;">
-          <li style="font-size: 1.5em;">유성고등학교</li>
-          <li style="font-size: 1.5em;">한남대학교 교육학과</li>
+        <div style="text-align: center; font-weight: bold;">학력</div>
+        <ul style="background-color: #2c3e50; border-radius: 10px;">
+          <li style="font-size: 1.5em; color: white;">유성고등학교</li>
+          <li style="font-size: 1.5em; color: white;">한남대학교 교육학과</li>
         </ul>
       </div>
       <div class="col-lg-4">
-        <div style="text-align: center; font-weight: bold; color: white; background-color: #2c3e50; border-radius: 10px;">코리아IT아카데미 교육과정</div>
-        <ul style="border: 5px solid #2c3e50; border-radius: 10px;">
-          <li style="font-size: 1.5em;">웹개발 수료</li>
-          <li style="font-size: 1.5em;">Javascript 풀스택개발 수강중</li>
+        <div style="text-align: center; font-weight: bold;">코리아IT아카데미 교육과정</div>
+        <ul style="background-color: #2c3e50; border-radius: 10px;">
+          <li style="font-size: 1.5em; color: white;">웹개발 수료</li>
+          <li style="font-size: 1.5em; color: white;">Javascript 풀스택개발 수강중</li>
         </ul>
       </div>
     </div>
