--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
           <span class="name">{{ site.title }}</span>
           <hr class="star-light" />
           <span class="skills">{{ site.skills }}</span>
-          <span>포기하지 않는 끈기와 과정을 즐기는 자세로 임하겠습니다.</span>
+          <span class="comment">{{ site.comment }}</span>
         </div>
       </div>
     </div>
