--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,8 +7,7 @@
         <div class="intro-text">
           <span class="name">{{ site.title }}</span>
           <hr class="star-light" />
-          <div class="skills">{{ site.skills }}</div>
-          <div class="comment">{{ site.comment }}</div>
+          <span class="skills">{{ site.skills }}</span>
         </div>
       </div>
     </div>
