--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,8 @@
         <div class="intro-text">
           <span class="name">{{ site.title }}</span>
           <hr class="star-light" />
-          <span class="skills">{{ site.skills }}</span>
+          <div class="skills">{{ site.skills }}</div>
+          <div class="skills">{{ site.comment }}</div>
         </div>
       </div>
     </div>
