--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -10,7 +10,7 @@
     <div class="row">
       <div class="col-lg-4">
         <div style="text-align: center; font-weight: bold;">소개</div>
-        <ul style="border: 5px #2c3e50; border-radius: 10px;">
+        <ul style="border: 5px solid #2c3e50; border-radius: 10px;">
           <li style="font-size: 1.5em;">이름 : 송현석</li>
           <li style="font-size: 1.5em;">생년월일 : 1992.03.30</li>
           <li style="font-size: 1.5em;">연락처 : 010-2837-0309</li>
@@ -19,14 +19,14 @@
       </div>
       <div class="col-lg-4">
         <div style="text-align: center; font-weight: bold;">학력</div>
-        <ul style="border: 5px #2c3e50; border-radius: 10px;">
+        <ul style="border: 5px solid #2c3e50; border-radius: 10px;">
           <li style="font-size: 1.5em;">유성고등학교</li>
           <li style="font-size: 1.5em;">한남대학교 교육학과</li>
         </ul>
       </div>
       <div class="col-lg-4">
         <div style="text-align: center; font-weight: bold;">코리아IT아카데미 교육과정</div>
-        <ul style="border: 5px #2c3e50; border-radius: 10px;">
+        <ul style="border: 5px solid #2c3e50; border-radius: 10px;">
           <li style="font-size: 1.5em;">웹개발 수료</li>
           <li style="font-size: 1.5em;">Javascript 풀스택개발 수강중</li>
         </ul>
