--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -17,7 +17,8 @@
             <hr class="star-primary">
             <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
             {% if post.description %}
-            <p>{{ post.description }}</p>
+            <p style="margin: 10px;">{{ post.description1 }}</p>
+            <p style="margin: 10px;">{{ post.description2 }}</p>
             {% endif %}
             <ul class="list-inline item-details">
               {% if post.client %}
