--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -16,9 +16,11 @@
             <h2>{{ post.title }}</h2>
             <hr class="star-primary">
             <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
-            {% if post.description %}
-            <p style="margin: 10px;">{{ post.description1 }}</p>
-            <p style="margin: 10px;">{{ post.description2 }}</p>
+            {% if post.description1 %}
+            <p>{{ post.description1 }}</p>
+            {% endif %}
+            {% if post.description2 %}
+            <p>{{ post.description2 }}</p>
             {% endif %}
             <ul class="list-inline item-details">
               {% if post.client %}
